--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "gatsby": "^2.0.76",
     "gatsby-image": "^2.0.20",
+    "gatsby-plugin-catch-links": "^2.0.9",
     "gatsby-plugin-favicon": "^3.1.5",
     "gatsby-plugin-google-analytics": "^2.0.9",
     "gatsby-plugin-google-fonts": "0.0.4",
@@ -18,6 +19,7 @@
     "gatsby-plugin-stripe": "^1.2.0",
     "gatsby-remark-social-cards": "^0.4.0",
     "gatsby-source-filesystem": "^2.0.8",
+    "gatsby-transformer-remark": "^2.2.0",
     "gatsby-transformer-sharp": "^2.1.8",
     "node-sass": "^4.11.0",
     "prop-types": "^15.6.2",
