--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
-    "gatsby": "^2.0.76",
+    "gatsby": "^2.0.88",
     "gatsby-image": "^2.0.20",
     "gatsby-plugin-catch-links": "^2.0.9",
     "gatsby-plugin-favicon": "^3.1.5",
@@ -17,6 +17,7 @@
     "gatsby-plugin-sass": "^2.0.0-rc.2",
     "gatsby-plugin-sharp": "^2.0.14",
     "gatsby-plugin-stripe": "^1.2.0",
+    "gatsby-remark-images": "^3.0.1",
     "gatsby-remark-social-cards": "^0.4.0",
     "gatsby-source-filesystem": "^2.0.8",
     "gatsby-transformer-remark": "^2.2.0",
