--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "kvlly",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "description": "Personal site for Kelly Vaughn",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Kelly Vaughn <kelly@thetaproom.com>",
   "dependencies": {
     "gatsby": "^2.0.88",
     "gatsby-image": "^2.0.20",
