--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gatsby-plugin-favicon": "^3.1.6",
     "gatsby-plugin-google-analytics": "^2.1.4",
     "gatsby-plugin-google-fonts": "0.0.4",
+    "gatsby-plugin-layout": "^1.1.2",
     "gatsby-plugin-manifest": "^2.2.3",
     "gatsby-plugin-offline": "^2.2.4",
     "gatsby-plugin-react-helmet": "^3.1.2",
