--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gatsby-plugin-react-helmet": "^3.1.2",
     "gatsby-plugin-sass": "^2.1.4",
     "gatsby-plugin-sharp": "^2.2.9",
+    "gatsby-plugin-sitemap": "^2.2.5",
     "gatsby-plugin-stripe": "^1.2.2",
     "gatsby-remark-images": "^3.1.7",
     "gatsby-remark-social-cards": "^0.4.1",
